<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.welcome.WelcomeFragment">

    <data>
        <variable
            name="welcomeScreen"
            type="com.udacity.shoestore.screens.welcome.WelcomeFragment" />
    </data>

    <!--    LinearLayout was chosen here because i'd like to arrange vertically the views -->
    <!--    This configuration is better for simple layouts, so this fits for this case.-->
    <!--    In this screen, and for all apps screens, the wide orientation doesn't bring any benefits -->
    <!--    so the app is configured only to Portrait -->
    <LinearLayout
        android:id="@+id/welcomeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding"
        android:paddingTop="@dimen/margin_buttons"
        android:paddingEnd="@dimen/padding"
        android:paddingBottom="@dimen/padding">

        <TextView
            android:id="@+id/welcomeTextView"
            style="@style/WelcomeStyleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_buttons"
            android:layout_marginTop="@dimen/paddingButtons"
            android:layout_marginEnd="@dimen/margin_buttons"
            android:layout_marginBottom="@dimen/margin_buttons"
            android:text="@string/welcome"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/welComeTextBodyView"
            style="@style/welcomeInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_buttons"
            android:layout_marginTop="@dimen/margin_buttons"
            android:layout_marginEnd="@dimen/margin_buttons"
            android:layout_marginBottom="@dimen/margin_buttons"
            android:text="@string/welcome_info_text" />

        <Button
            android:id="@+id/buttonToInstructions"
            style="@style/LoginButton"
            android:onClick="@{() -> welcomeScreen.goToInstruction()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginBottom="@dimen/margin_buttons"
            android:paddingStart="@dimen/margin_buttons"
            android:paddingTop="@dimen/paddingButtons"
            android:paddingEnd="@dimen/margin_buttons"
            android:paddingBottom="@dimen/paddingButtons"
            android:text="@string/go_to_instructions" />
    </LinearLayout>
</layout>